fixed the pricing columns, all that is left to do is rebuild the landing page and work on mobile responsiveness.

--- a/index.html
+++ b/index.html
@@ -328,69 +328,71 @@
       </section>
 
       <section id="pricing">
-        <div class="pricing--container">
-          <div class="pricing__row">
-            <div class="pricing__info">
-              <h5 class="purple">Pricing</h5>
-              <h2 class="pricing__info--title">Reasonable & Affordable</h2>
-              <p class="pricing__info--para">
+        <div class="positioning">
+          <div class="padding">
+            <div class="pricing--header__container">
+              <h5 class="pricing__subheader purple">Pricing</h5>
+              <h2 class="pricing__header">
+                Reasonable & Flexible <span class="purple">Plans.</span>
+              </h2>
+              <p class="pricing__para">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                 eiusmod tempor incididunt ut labore et dolore magna aliqua.
               </p>
             </div>
-          </div>
-          <div class="pricing__list">
-            <div class="price__container">
-              <div class="price--wrapper">
-                <h3 class="price__subtitle">Personal</h3>
-                <h2 class="price__title">$17.99</h2>
-                <h3 class="price__monthly">Monthly</h3>
+            <div class="plans__container">
+              <div class="plan__container">
+                <div class="highlighter__divider--green"></div>
+                <div class="plan__header">
+                  <span class="name">Personal</span>
+                  <span class="price">$17.99</span>
+                  <span class="duration">Monthly</span>
+                </div>
+                <div class="plan__features">
+                  <span class="feature__main">For Individuals</span>
+                  <span class="feature">30 Templates</span>
+                  <span class="feature">7 Landing Pages</span>
+                  <span class="feature">12 Internal Pages</span>
+                  <span class="feature">Basic Assistance</span>
+                </div>
+                <div class="plan--btn__container">
+                  <button class="plan--btn">Buy Now</button>
+                </div>
               </div>
-              <div class="price--wrapper">
-                <h3 class="prices__main">For Individuals</h3>
-                <p class="feature">30 Templates</p>
-                <p class="feature">7 Landing Pages</p>
-                <p class="feature">12 Internal Pages</p>
-                <p class="feature">Basic Assistance</p>
+              <div class="plan__container--purple">
+                <div class="plan__header">
+                  <span class="name--white">Business</span>
+                  <span class="price--white">$37.99</span>
+                  <span class="duration--white">Monthly</span>
+                </div>
+                <div class="plan__features">
+                  <span class="feature__main--white">For Small Businesses</span>
+                  <span class="feature--white">60 Templates</span>
+                  <span class="feature--white">15 Landing Pages</span>
+                  <span class="feature--white">22 Internal Pages</span>
+                  <span class="feature--white">Priority Assistance</span>
+                </div>
+                <div class="plan--btn__container">
+                  <button class="plan--btn__white">Buy Now</button>
+                </div>
               </div>
-              <div class="price--wrapper">
-                <a href="" class="price__btn1">Buy Now</a>
-              </div>
-            </div>
-
-            <div class="price__container purple--bg">
-              <div class="price--wrapper border">
-                <h3 class="price__subtitle text--white">Business</h3>
-                <h2 class="price__title text--white">$37.99</h2>
-                <h3 class="price__monthly text--white">Monthly</h3>
-              </div>
-              <div class="price--wrapper border">
-                <h3 class="prices__main text--white">For Small Businesses</h3>
-                <p class="feature text--white">60 Templates</p>
-                <p class="feature text--white">15 Landing Pages</p>
-                <p class="feature text--white">22 Internal Pages</p>
-                <p class="feature text--white">Priority Assistance</p>
-              </div>
-              <div class="price--wrapper border">
-                <a href="" class="price__btn2">Buy Now</a>
-              </div>
-            </div>
-
-            <div class="price__container">
-              <div class="price--wrapper">
-                <h3 class="price__subtitle">Enterprise</h3>
-                <h2 class="price__title">$57.99</h2>
-                <h3 class="price__monthly">Monthly</h3>
-              </div>
-              <div class="price--wrapper">
-                <h3 class="prices__main">For Large Companies</h3>
-                <p class="feature">90 Templates</p>
-                <p class="feature">27 Landing Pages</p>
-                <p class="feature">37 Internal Pages</p>
-                <p class="feature">Personal Assistance</p>
-              </div>
-              <div class="price--wrapper">
-                <a href="" class="price__btn3">Buy Now</a>
+              <div class="plan__container">
+                <div class="highlighter__divider--red"></div>
+                <div class="plan__header">
+                  <span class="name">Enterprise</span>
+                  <span class="price">$57.99</span>
+                  <span class="duration">Monthly</span>
+                </div>
+                <div class="plan__features">
+                  <span class="feature__main">For Large Companies </span>
+                  <span class="feature">90 Templates</span>
+                  <span class="feature">27 Landing Pages</span>
+                  <span class="feature">37 Internal Pages</span>
+                  <span class="feature">Personal Assistance</span>
+                </div>
+                <div class="plan--btn__container">
+                  <button class="plan--btn--red">Buy Now</button>
+                </div>
               </div>
             </div>
           </div>
@@ -453,7 +455,9 @@
           <div class="gs__primarycontainer">
             <div class="gs__row">
               <div class="gs__text--container">
-                <h5 class="gs__text text--white">Developers all over the world are happily using Treact</h5>
+                <h5 class="gs__text text--white">
+                  Developers all over the world are happily using Treact
+                </h5>
               </div>
               <div class="gs__link--container">
                 <a href="/" class="gs__btn">Get Started</a>
