completed the tweaking of the responsiveness. this fits the screen size of an iphone14 max.

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 
         <section id="steps">
           <div class="steps--container">
-            <div class="row">
+            <div class="row steps__row">
               <div class="steps--wrapper">
                 <figure class="steps__img--wrapper">
                   <img
